[gd_scene load_steps=9 format=3 uid="uid://ceaj5ikcc83he"]

[ext_resource type="Script" path="res://arcade_wheel.gd" id="1_55244"]
[ext_resource type="Texture2D" uid="uid://dd56dbwaed4a7" path="res://minogram_6x10.png" id="2_8f76e"]

[sub_resource type="Animation" id="Animation_c5q5u"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcadeWheel/AlphabetLetter1:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArcadeWheel/AlphabetLetter2:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ArcadeWheel/AlphabetLetterEnd:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ArcadeWheel/AlphabetLetter3:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_vv2kj"]
resource_name = "letter1_blink"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcadeWheel/AlphabetLetter1:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.3, 0.7, 0.8, 1)
}

[sub_resource type="Animation" id="Animation_isfjo"]
resource_name = "letter2_blink"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcadeWheel/AlphabetLetter2:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.3, 0.7, 0.8, 1)
}

[sub_resource type="Animation" id="Animation_tm5v3"]
resource_name = "letter3_blink"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcadeWheel/AlphabetLetter3:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.3, 0.7, 0.8, 1)
}

[sub_resource type="Animation" id="Animation_y6f10"]
resource_name = "letterend_blink"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcadeWheel/AlphabetLetterEnd:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.3, 0.7, 0.8, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8t3s7"]
_data = {
"RESET": SubResource("Animation_c5q5u"),
"letter1_blink": SubResource("Animation_vv2kj"),
"letter2_blink": SubResource("Animation_isfjo"),
"letter3_blink": SubResource("Animation_tm5v3"),
"letterend_blink": SubResource("Animation_y6f10")
}

[node name="ArcadeWheel" type="Control"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55244")

[node name="AlphabetLetter1" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
scale = Vector2(6, 6)
texture = ExtResource("2_8f76e")
centered = false
hframes = 13
vframes = 3

[node name="AlphabetLetter2" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(50, 0)
scale = Vector2(6, 6)
texture = ExtResource("2_8f76e")
centered = false
hframes = 13
vframes = 3

[node name="AlphabetLetter3" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(100, 0)
scale = Vector2(6, 6)
texture = ExtResource("2_8f76e")
centered = false
hframes = 13
vframes = 3

[node name="AlphabetLetterEnd" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(150, 0)
scale = Vector2(6, 6)
texture = ExtResource("2_8f76e")
centered = false
hframes = 13
vframes = 3
frame = 37

[node name="BlinkAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_8t3s7")
}

[node name="EXPLANATION" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -193.0
offset_top = 64.0
offset_right = 356.0
offset_bottom = 185.0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "use left stick/d-pad up/down to scroll through characters
A (Xbox) / X (PS) to accept and move to next character
B (xbox) / circle (PS) to move back
Y (xbox) / triangle (PS) resets the entire thing
on pressing END, the name gets printed to the debugger 
and the END button is hidden from view"
